--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.cowpoop.moooooo" >
+    package="org.cowpoop.moooooo">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".Moooooo" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".Moooooo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SetPayload" />
+        <activity android:name=".SetTarget" />
+        <activity android:name=".SetSource" />
+        <activity android:name=".RunExploit" />
+        <activity android:name=".SpawnShell" />
+        <activity android:name=".Settings"></activity>
     </application>
 
 </manifest>
