Updated CPP Libraries

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -20,6 +20,11 @@ add_library( # Sets the name of the library.
              # file are automatically included.
              src/main/cpp/native-lib.cpp )
 
+add_library( 
+             global-text
+             SHARED
+             src/main/cpp/global-text.cpp )
+
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because system libraries are included in the search path by
 # default, you only need to specify the name of the public NDK library
